--- a/index.html
+++ b/index.html
@@ -7,8 +7,35 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body id = "xd">
-		<section id = "s1">Обо мне</section>
-		<section id = "s2"><a href="lend/lend.html">Портфолио</a></section>
+		<section id = "s1">
+			<h1>
+				Обо мне
+			</h1>
+			<div class="grandColumn">
+				<p class="column c1">
+					Меня зовут Егор
+				</p>
+				<p class="column c2">
+					Я пытаюсь писать сайты
+				</p>
+				<p class="column c3">
+					Рад знакомству
+				</p>
+			</div>
+		</section>
+		<section id = "s2">
+			<h1>
+				Портфолио
+			</h1>
+			<ul>
+				<li>
+					Пример <a href="lend/lend.html">Одностраничного лэндинга</a>
+				</li>
+				<li>
+					Еще один <a href="strange/webinar.html">Лендинг</a>
+				</li>
+			</ul>
+		</section>
 		<section id = "s3">Прочее</section>
 		<nav>
 			<a href="#s1">Обо мне</a>
